--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "chip8"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "komchip"
+path = "src/komchip/lib.rs"
+
 [dependencies]
 minifb = "0.27.0"
 rand = "0.8.5"
